--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ subjects:
 - !lcsh 'Cato, Marcus Porcius, 95 B.C.-46 B.C. -- Drama'
 - !lcc 'PR'
 - !lcsh 'Tragedies'
+- GITenberg
 title: 'Cato: A Tragedy, in Five Acts'
 url: http://www.gutenberg.org/ebooks/31592
